# hackathon-agentic

./: create_db.py  customer_data.db  main.py  pyproject.toml  sessions.db
main_agent/: __init__.py  agent.py  entrypoint.py  prompts.py  tools.py
main_agent/agents/: __init__.py  agents.py  analyzer_agent.py  orchestrator_agent.py  recommender_agent.py
main_agent/agents/orchestrator/: __init__.py  agent_dispatcher.py  input_handler.py  orchestrator_agent.py
main_agent/prompts/: __init__.py  analyzer_prompt.py  orchestrator_prompt.py  prompt.py  recommender_prompt.py
